--- a/Bll/Bll.csproj
+++ b/Bll/Bll.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clientes.cs" />
     <Compile Include="SalonClases.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Diccionario.cs" />
