--- a/Bll/Bll.csproj
+++ b/Bll/Bll.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Clientes.cs" />
+    <Compile Include="Montos.cs" />
     <Compile Include="SalonClases.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Diccionario.cs" />
